--- a/src/app/components/pages/home/about-me/about-me.component.html
+++ b/src/app/components/pages/home/about-me/about-me.component.html
@@ -1,16 +1,18 @@
-<h4>About Me</h4>
-<p>
-    I am a passionate software engineer who loves to solve real world problems 
-    using new unexplored technologies. I enjoy developing good user experiences, 
-    wether it be for desktop, mobile, or video games. Always looking forward to 
-    working on the next big project. 
-</p>
-
-<p>
-    <strong><u>EDUCATION</u></strong><br>
-    Bachelor of Science in Arts and Entertainment Technologies, at The University of Texas at Austin<br>
-    August 2016 - May 2018 
-</p>
-<ul>
-    <li>Certificate of Elements of Computing</li>
-</ul>
+<h4 class="header">About Me</h4>
+<div class="content">
+    <p>
+        I am a passionate software engineer who loves to solve real world problems 
+        using new unexplored technologies. I enjoy developing good user experiences, 
+        wether it be for desktop, mobile, or video games. Always looking forward to 
+        working on the next big project. 
+    </p>
+    
+    <p>
+        <strong><u>EDUCATION</u></strong><br>
+        Bachelor of Science in Arts and Entertainment Technologies, at The University of Texas at Austin<br>
+        August 2016 - May 2018 
+    </p>
+    <ul>
+        <li>Certificate of Elements of Computing</li>
+    </ul>
+</div>
