--- a/src/app/components/pages/home/contact/contact.component.html
+++ b/src/app/components/pages/home/contact/contact.component.html
@@ -1,5 +1,5 @@
-<h4>Contact</h4>
-<div>
+<h4 class="header">Contact</h4>
+<div class="content">
     <a href="#">
         <p class="black"><i class="fa fa-linkedin-square" target="_blank" style="font-size:24px"></i> &nbsp;LinkedIn</p>
     </a>
