--- a/src/app/components/pages/skills-tools/skills-tools.component.css
+++ b/src/app/components/pages/skills-tools/skills-tools.component.css
@@ -1,4 +1,10 @@
 h3 {
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-left: 10px;
+}
+
+li {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
