Added Software Engineering Projects
Added Software Engineering Projects page. Inserted projects/software route. Created SoftwareProjects model. Added images and video for page.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
               Projects
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" [routerLink]="['/software']">Software Engineering</a>
+              <a class="dropdown-item" [routerLink]="['/projects/software']">Software Engineering</a>
               <a class="dropdown-item" [routerLink]="['/vrar']">VR / AR</a>
             </div>
         </li>
