--- a/src/app/components/pages/home/contact/contact.component.html
+++ b/src/app/components/pages/home/contact/contact.component.html
@@ -1,12 +1,18 @@
 <h4 class="header">Contact</h4>
 <div class="content">
-    <a href="#">
-        <p class="black"><i class="fa fa-linkedin-square" target="_blank" style="font-size:24px"></i> &nbsp;LinkedIn</p>
+    <a href="https://www.linkedin.com/in/thomas-a-mendez">
+        <p class="black">
+            <i class="fa fa-linkedin-square" target="_blank" style="font-size:24px"></i> &nbsp;LinkedIn
+        </p>
     </a>
-    <a href="#">
-        <p class="black"><i class="fa fa-github" style="font-size:24px"></i> &nbsp;Github</p>
+    <a href="https://github.com/thomasmendez">
+        <p class="black">
+            <i class="fa fa-github" style="font-size:24px"></i> &nbsp;Github
+        </p>
     </a>
-    <a href="#">
-        <p class="black"><i class="fa fa-envelope-square" style="font-size:24px"></i> &nbsp;Email</p>
+    <a href="mailto:thomasmendez01@gmail.com">
+        <p class="black">
+            <i class="fa fa-envelope-square" style="font-size:24px"></i> &nbsp;Email
+        </p>
     </a>
 </div>
