Updated Profile Image
Updated profile image

--- a/src/app/components/title-header/title-header.component.html
+++ b/src/app/components/title-header/title-header.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="title-header">
     <div *ngIf="isHome; else noImage">
-        <img class="rounded-circle" alt="100x100" src="assets/pic.png">
+        <img class="rounded-circle" alt="100x100" src="{{image}}">
         <h1>Thomas A Mendez</h1>
         <h3 class="light-text">Software Engineer <br> and Game Developer</h3>
     </div>
