--- a/src/app/components/pages/software-projects/software-projects.component.html
+++ b/src/app/components/pages/software-projects/software-projects.component.html
@@ -9,10 +9,11 @@
             <div class="row" *ngFor="let project of projects; let indexOfelement=index;">
 
                 <div class="col-sm-6 project">
-                    <h2>{{project.title}}</h2>
+                    <h2 class="header">{{project.title}}</h2>
+
                     <p>{{project.description}}</p>
                     <p><u>My Tasks</u></p>
-                    <ul>
+                    <ul class="mytasks">
                         <li *ngFor="let task of project.myTasks">
                             {{task}}
                         </li>
