Added VR / AR Projects
Added VR / AR Projects page. Unit test and E2E test were included. Added video files for projects.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" [routerLink]="['/projects/software']">Software Engineering</a>
-              <a class="dropdown-item" [routerLink]="['/vrar']">VR / AR</a>
+              <a class="dropdown-item" [routerLink]="['/projects/vr-ar']">VR / AR</a>
             </div>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']">
