--- a/src/app/components/pages/software-projects/software-projects.component.html
+++ b/src/app/components/pages/software-projects/software-projects.component.html
@@ -33,6 +33,9 @@
                     <div *ngIf=project.tools.length>
                         <p><u>Tools:</u> {{project.tools}}</p>
                     </div>
+                    <p><u>Project Duration:</u> {{project.projectDuration}}</p>
+                    <p><u>Project Start Date:</u> {{project.startDate}}</p>
+                    <p><u>Project End Date:</u> {{project.endDate}}</p>
                     <div *ngIf=project.note>
                         <p>*<em>{{project.note}}</em>*</p>
                     </div>
