--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             </div>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['/resume']">Resume</a>
+          <a class="nav-link" href="assets/ResumeThomasMendezWeb.pdf">Resume</a>
         </li>
       </ul>
     </div>
