--- a/src/app/components/pages/home/contact/contact.component.html
+++ b/src/app/components/pages/home/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="content">
     <a href="https://www.linkedin.com/in/thomas-a-mendez">
         <p class="black">
-            <i class="fa fa-linkedin-square" target="_blank" style="font-size:24px"></i> &nbsp;LinkedIn
+            <i class="fa fa-linkedin-square" style="font-size:24px"></i> &nbsp;LinkedIn
         </p>
     </a>
     <a href="https://github.com/thomasmendez">
